[package]
name = "practice"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "practice_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2.0.0-beta.4"
tauri-plugin-dialog = "2.0.0-beta.4"
image = "0.25.1"
base64 = "0.22.0"
sqlx = { version = "0.7.4", features = ["sqlite"] }
tauri-plugin-sql = {version = "2.0.0-beta.3", features = ["sqlite"] }
tokio = { version = "1.13.0", features = ["full"] }
idgen = "0.1.2"
once_cell = "1.13.0"
chrono = "0.4.33"

file = "1.1.2"
rdev = "0.5.3"
lazy_static = "1.4.0"
directories = "5.0.1"

