[package]
name = "tools"
version = "0.1.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tools_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["protocol-asset",  "tray-icon"] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0-rc"
image = "0.25.2"
base64 = "0.22.1"
sqlx = { version = "0.8.2", features = ["sqlite"] }
tauri-plugin-sql = {version = "2.0.0-rc", features = ["sqlite"] }
tokio = { version = "1.40.0", features = ["full"] }
idgen = "0.1.2"
once_cell = "1.19.0"
chrono = "0.4.38"
file = "1.1.2"
rdev = "0.5.3"
lazy_static = "1.5.0"
directories = "5.0.1"
tauri-plugin-clipboard-manager = "2.1.0-beta.7"
ollama-rs = "0.2.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.0.0-rc"
tauri-plugin-global-shortcut = "2.0.0-rc"
tauri-plugin-single-instance = "2.0.0-rc"




